feat: 픽셀 좌표 로그 기록 및 handler parameter통일
- log_handler에 to_pixel() 추가
- write/log_handler(result)로 통일하여 각 handler내부에서 필요한 값 찾아 사용

--- a/configs/yoloworld.yaml
+++ b/configs/yoloworld.yaml
@@ -15,6 +15,7 @@ output:
     - type : "LogHandler"
       dir : "./logs"
       file_name : "yoloworld_results_log.csv"
+      pixel : True
 
 source:
   type : 'ImageSource'
